--- a/main.tex
+++ b/main.tex
@@ -62,8 +62,8 @@
 
 \FEIlistOfAppendix
 \FEIappendix{Dokumentácia ku kódu\label{att:A}}{includes/attachmentA}
-% \FEIappendix{Algoritmus\label{att:B}}{includes/attachmentB}
-% \FEIappendix{Výpis sublime\label{att:C}}{includes/attachmentC}
+\FEIappendix{Kód ovládača\label{att:B}}{includes/attachmentB}
+\FEIappendix{Videá ovládania robota\label{att:C}}{includes/attachmentC}
 
 \end{document}
 
