--- a/includes/attachmentC.tex
+++ b/includes/attachmentC.tex
@@ -1,8 +1,3 @@
 % !TEX root = ../main.tex
-\lstinputlisting[
-	label={lst:sublime}, 
-	caption={Ukážka sublime-project},
-	language=,
-	basicstyle=\scriptsize,
-	showstringspaces=false
-]{includes/listings/fei.sublime}
+
+Videá ovládania robota sú priložené v osobitnom \textit{.zip} súbore.
