controller: bash code colour
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/controller.tex
+++ b/includes/controller.tex
@@ -46,7 +46,7 @@ Uzol \textbf{BlackMetal} vytvorí príjemcu, ktorý počúva na~téme \textbf{/c
 \lstset{language=bash,
 	basicstyle=\ttfamily,
 	keywordstyle=\color{blue}\ttfamily,
-	stringstyle=\color{orange}\ttfamily,
+	stringstyle=\color{black}\ttfamily,
 	commentstyle=\color{green}\ttfamily,
 	morecomment=[l][\color{magenta}]{\#},
 	numberstyle=\color{red}
