indludes: use only obrazok or Obr.
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/controller.tex
+++ b/includes/controller.tex
@@ -12,7 +12,7 @@
 \end{figure}
 
 Cieľom kapitoly je navrhnúť a~implementoval ovládač v~prostredí ROS2, ktorý komunikuje s~robotom
-cez~protokol TCP/IP. Na~obrázku Obr.~\ref{fig:flowchart} môžeme vidieť viacero objektov rôznych
+cez~protokol TCP/IP. Na~obrázku~\ref{fig:flowchart} môžeme vidieť viacero objektov rôznych
 farieb. Objekty zobrazené červenou farbou sú~uzly spracovávané a~vytvárané v~rámci ROS2. Každý
 tento objekt sa vykonáva v~osobitnom procese. Objekty zobrazené oranžovou farbou sú~objekty, ktoré
 majú svoje vlastné vlákno. Tieto objekty boli vytvorené uzlom BlackMetal. Dátové štruktúry Queue,
