--- a/includes/formerState.tex
+++ b/includes/formerState.tex
@@ -62,7 +62,7 @@ podpornými všesmerovými kolesami. Motory robota sú~pripojené na~meniče. Ti
 \end{itemize}
 
 \noindent Títo klienti sú~len reprezentáciou dvoch klientov pripájajúcich sa na~dva separátne porty na~robote.
-V~realite to~môže byť jeden a~ten istý počítač. Na~obrázku Obr.~\ref{fig:schemaRobota} vidíme komunikačnú schému
+V~realite to~môže byť jeden a~ten istý počítač. Na~obrázku~\ref{fig:schemaRobota} vidíme komunikačnú schému
 jednotlivých častí robota.
 
 \clearpage
