--- a/includes/technologie.tex
+++ b/includes/technologie.tex
@@ -275,7 +275,7 @@ Táto podobnosť končí na~najvyššej vrstve. Ako sme videli na~Obr.~\ref{fig:
 Najdôležitejšie je pre~nás vedieť, že~komunikácia je spracovávaná modelom DDS (Služba distribúcie údajov) z~anglického
 (\acrlong{DDS}). DDS obsahuje podobné dizajnové vzory ale~poskytuje väčšiu ovládateľnosť komunikácie systémov, zatiaľ
 čo odstraňuje všetky vrstvy, ktoré zabraňujú debugovaniu~\cite{ElectronicDesign}. Tento model zároveň zlepšuje výkon,
-stabilitu a~bezpečnosť modelu oproti ROS1. Je založený na~TCP/IP a~UDP/IP protokole. Z~obrázku Obr.~\ref{fig:struktury}
+stabilitu a~bezpečnosť modelu oproti ROS1. Je založený na~TCP/IP a~UDP/IP protokole. Z~obrázku~\ref{fig:struktury}
 vyčítame aj~lepšie rozloženie modulov. To~zabezpečuje jednoduchšie prispôsobovanie systému pre~nové funkcionality. Podpora operačných systémov
 sa v~ROS2 rozšírila aj~o~Windows, Mac OS či~RTOS (Operačné systémy reálneho času) z~anglického \acrlong{RTOS}. Operačné systémy nie sú~jediné
 rozšírenie ohľadom kompatibility. S~ROS2 je možné programovať už~aj~v~Jave či~Matlabe. Tvorcovia mysleli aj~na~programátorov a~pridali rozšírené
