--- a/includes/workOnRobot.tex
+++ b/includes/workOnRobot.tex
@@ -172,9 +172,9 @@ oboch motorov, tým, že~bol zabezpečený pohyb kolies vo~vzduchu s~vypodložen
 	\label{fig:lavePraveKoleso}
 \end{figure}
 
-Na~obrázku Obr.~\ref{fig:prechChar} vidíme zašmený signál rýchlostí, ktoré sme obdržali z~enkóderov. Predpokladá sa,
+Na~obrázku~\ref{fig:prechChar} vidíme zašmený signál rýchlostí, ktoré sme obdržali z~enkóderov. Predpokladá sa,
 že~toto zašumenie je spôsobené nesprávnym vedením káblov robota, prípadne nepostačujúcim izolovaním ich niektorých
-častí. Keď sa pozrieme na~obrázok Obr.~\ref{fig:robot}, tak~môžeme vidieť nesprávny manažment káblov. Túto teóriu
+častí. Keď sa pozrieme na~obrázok~\ref{fig:robot}, tak~môžeme vidieť nesprávny manažment káblov. Túto teóriu
 potvrdzuje aj~fakt, že~spätná väzba rýchlosti, keď robot stojí neobsahuje rušenie a~je zaručene 0. Problémy zo~zašmeným
 signálom riešili aj~už~v~spomínanom tímovom projekte~\cite{timovyProjekt}. Im sa podarilo spraviť graf prechodovej
 charakteristiky rýchlosti kolies zobrazený na~Obr.~\ref{fig:prechChar}.
