tech: used tilda before cite
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/technologie.tex
+++ b/includes/technologie.tex
@@ -61,7 +61,7 @@ robotoch. Nad~operačným systémom Windows má niekoľko výhod.
 		(GNU je skratka pre~\acrlong{GNU}) a~GNU Debugger (GDB) sú~vynikajúce nástroje pre~C/C++ programátorov.
 
 	\item \textbf{Bezpečnosť} Systémy s~jadrom Linux sú~len zriedkavo nakazené škodlivými programami, to~robí z~operačných
-		systémov založených na~Linuxe veľmi bezpečnými operačnými systémami.\cite{linuxSecurity}
+		systémov založených na~Linuxe veľmi bezpečnými operačnými systémami.~\cite{linuxSecurity}
 		V~Linuxe je ťažšie infikovať sa škodlivými programami, pretože programy majú obmedzené
 		oprávnenie a~prístup k~ďalším súborom. Systém je navrhnutý tak, aby bol odolný voči útokom.
 
