bib: tech linuxSecurity
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -44,6 +44,12 @@
   urldate = {2022-12-23}
 }
 
+@online{linuxSecurity,
+	title = {{Linux security}},
+	url = {https://www.emertxe.com/embedded/why-linux-is-more-secure-than-other-operating-systems/},
+	urldate = {2023-05-20}
+}
+
 @online{ElectronicDesign,
   title = {{ElectronicDesign}},
   url = {https://www.electronicdesign.com/markets/automation/article/21258792/realtime-innovations-rti-ros-and-dds-making-the-most-out-of-your-software-framework},
