--- a/includes/introduction.tex
+++ b/includes/introduction.tex
@@ -3,7 +3,7 @@
 Robotizácia sa v~dnešnej dobe viac a~viac rozširuje k~bežným ľuďom a~do~ich príbytkov. Cieľom všetkých vedcov
 a~inžinierov je vytvoriť roboty, ktoré budu schopné pomáhať ľuďom vo~vykonávaní každodenných činností. Tým,
 že~lúdia žijú v~domoch a~bytoch o~rôznych veľkostiach, tak~je potrebné vytvoriť roboty, ktoré sa budu vedieť
-pohybovať v~užších ale~aj~otvorených priestoroch. Keď sa pozrieme na~dnešné ľudom prístupné mobilné roboty,
+pohybovať v~užších, ale~aj~otvorených priestoroch. Keď sa pozrieme na~dnešné ľudom prístupné mobilné roboty,
 tak~majú väčšinou diferenciálne podvozky, ktoré sú~schopné pohybovať sa po~rovine, na~ktorej sa nenachádzajú veľké
 prekážky. To~sú~hlavne parkety, dlaždice alebo koberce. Tento trend sa dlhšiu dobu nezmení a~bude sa len posúvať
 vpred.
@@ -19,7 +19,7 @@ autonómnymi algoritmami.
 
 Na~to~aby sme vedeli využiť všetky tieto výhody, tak~je potrebné mať ovládač, ktorý bude vytvárať rozhranie medzi
 robotickým operačným systémom a~komunikačným rozhraním robota. V~tejto práci sa budeme venovať implementácii viacerých
-procesov, ktoré budu spracovávať informácie poslané robotickým operačným systémom. Tieto správy spracujeme
+procesov, ktoré budú spracovávať informácie poslané robotickým operačným systémom. Tieto správy spracujeme
 do~formátu JSON s~tým, že~prepočítame vstupné lineárne a~uhlové rýchlosti zo~správy tejto témy na~rýchlosti ľavého
-a~pravého kolesa diferenciálneho podvozku. Zároveň výstupom bude vypočítaná odometria robota, ktorá obsahuje údaje
-o~rýchlosti, smere a~polohe robota.
+a~pravého kolesa diferenciálneho podvozku. Výsledkom výpočtov zo získaných aktuálnych rýchlostí robota bude jeho
+odometria, ktorá obsahuje údaje o~rýchlosti, smere a~polohe robota.
