--- a/includes/thanks.tex
+++ b/includes/thanks.tex
@@ -1,2 +1,2 @@
 % !TEX root = ../main.tex
-Chcel by som sa poďakovať môjmu školiteľovi.
+Chcel by som sa poďakovať môjmu školiteľovi pánovi Michalovi Dobišovi.
