--- a/includes/filtration.tex
+++ b/includes/filtration.tex
@@ -8,7 +8,7 @@ za~sekundu \(\frac{m}{s}\). Tento prevod nebude jednoznačný, pretože každý 
 rýchlosť pri~zmene impulzov za~sekundu. Tento prevod (sklon prelozenej linearnej regresie cez~namerané data) je možné získať z~merania, kde~po~nastavení
 rýchlostí zoberieme veľa dát z~enkóderov a~zistíme, ako sa zmení rýchlosť pri~zmene impulzov za~sekundu.
 
-Prvý nápad na~získanie čo najlepšej prevodovej charakteristiky bolo cez~všetky dáta položiť lineárnu regresiu. To~sa ukázalo ako zlé riešenie, lebo dáta,
+Prvá úvaha na~získanie čo najlepšej prevodovej charakteristiky bolo cez~všetky dáta položiť lineárnu regresiu. To~sa ukázalo ako zlé riešenie, lebo dáta,
 ktoré dostávame majú veľmi veľký rozptyl. Jednou z~nasledujúcich úvah bolo spraviť kĺzavý priemer. Toto riešenie malo tiež svoje chyby a~to~v~tom, že~zmeny
 zaznamenaných impulzov za~sekundu sa zmenili v~závislosti od~rýchlosti a~smeru Obr.~\ref{fig:rw_lw_nf}. V~tomto bode sme vyskúšali počítať odometriu
 z~obdržaných dát. Táto implementácia bola veľmi nepresná. Zároveň nám tento pokus potvrdil, že~potrebujeme filtrovať dáta, ktoré dostávame
@@ -182,7 +182,7 @@ Obyčajná implementácia filtra by nám spomalila zmenu vypočítanej rýchlost
 Tento problém sme opravili prestavením počiatočnej hodnoty filtra na~prvú hodnotu po~zmene rýchlosti. Toto riešenie sa
 ukázalo ako najlepšie so~skúšaných riešení.
 
-Toto riešenie má ale~jeden problém. Ak~prvá prijatá hodnota po~zmene rýchlosti nie je v~blízkom okolí žiadanej
+Toto riešenie má jeden problém. Ak~prvá prijatá hodnota po~zmene rýchlosti nie je v~blízkom okolí žiadanej
 hodnoty, tak~pôsobením filtra bude trvať dlho pokým sa hodnoty vyprodukované filtrom dostanú na~správnu hodnotu.
 Tento problém vieme vyriešiť predpočítavaním hodnôt za~pomoci vypočítaných lineárnych aproximácii. Problém so~zlou
 počiatočnou hodnotou môžeme vidieť aj~na~posledom grafe~\ref{fig:rw_lw_08100}. Tento problém sme vyriešili
@@ -203,7 +203,7 @@ ich využili na~predpočítanie počiatočnej hodnoty.
 	\label{fig:rw_lw_08100_3}
 \end{figure}
 
-Meranie so~zmenou predpočítavania prvej hodnoty sme zopakovali viackrát aby sa ustálili hodnoty aproximácie.
+Meranie so~zmenou predpočítavania prvej hodnoty sme zopakovali viackrát, aby sa ustálili hodnoty aproximácie.
 Po~opakovanom experimente sa nám hodnoty sklonov lineárnych aproximácii ustálili na~hodnotách:
 
 \begin{itemize}
@@ -239,7 +239,7 @@ na~krivky. To~spôsobuje nepresné uvedenie aktuálnej polohy. Tieto nepresnosti
 V~prípade, že~sa robot má otočiť o~90 stupňov, respektíve o~$\frac{\pi}{2}$ radiánu, tak~robot toto otočenie
 reprezentuje iným uhlom, poprípade aj~posunutím.
 
-Aby sme videli ako ovplyvňuje filter s~nami navrhnutými parametrami tak~sme spravili ďalšie meranie s~filtrom
+Aby sme videli ako ovplyvňuje filter s~nami navrhnutými parametrami, tak~sme spravili ďalšie meranie s~filtrom
 s~najlepšími hodnotami. Druhý pokus sme zvolili najlepšiu hodnotu filtra s~koeficientom $\alpha$ rovným 0.8.
 Obrázok~\ref{fig:stvorecSFiltrom} reprezentuje dráhu, ktorú robot prešiel, keď sme na~prichádzajúce dáta
 aplikovali tento filter.
@@ -299,7 +299,7 @@ zhoršenie presnosti určovania polohy robota.
 	\label{fig:stvorecSoSlabsimFiltrom}
 \end{figure}
 
-Ak~by sme použili silnejší filter dostali by sme lepši výsledok. V~tom prípade by sme ale~nemali relevantný výsledok
+Ak~by sme použili silnejší filter dostali by sme lepši výsledok. V~tom prípade by sme, ale~nemali relevantný výsledok
 vzhľadom na~robot. Filtrované dáta by boli až veľmi skreslené žiadanou hodnotou.
 
 Experimentmi sme sa dostali k~najvhodnejšiemu parametru alpha $\alpha$, ktorý sme využili ako vstup
